--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,6 @@
 <h1>My Tasks:</h1>
-
-<%# <ul>
+<ul>
   <% @tasks.each do |task| %>
-    <%# <li><%= task.title %></li>
-  <%# <% end %>
-<%# </ul> %>
+    <li><%= task.title %></li>
+  <% end %>
+</ul>
